[project]
name = "sqlitecloud-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "pydantic-settings>=2.7.1",
    "requests>=2.32.3",
    "sqlalchemy-sqlitecloud>=0.1.2",
    "sqlitecloud>=0.0.83",
    "sqlmodel>=0.0.22",
]
